# cognizantaiml140426

day2/: pyproject.toml
day2/docs/source/: conf.py  index.rst  start.rst
day2/ecommerce.egg-info/: PKG-INFO  requires.txt
day2/src/: app.py  start.py
day2/src/models/: __init_.py
day2/src/store/: __init__.py
day2/src/view/: __init__.py
day5env/: .env  pyproject.toml  pyvenv.cfg
day5env/src/Banking_Project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day5env/src/configuration/: conf.py
day5env/src/dataloaders/: customer_csv_data_loader.py  customer_data_loader.py  customer_json_data_loader.py  customer_txt_data_loader.py
day5env/src/models/: address.py  corporate.py  customer.py  full_name.py  gender.py  individual.py
day5env/src/resources/: customers.csv  customers.json  customers.txt
day5env/src/stores/: customer_store.py  customer_store_impl.py
day5env/src/utils/: main.py
day6/: pyproject.toml
day6/asyncio_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day6/dayenv/: pyvenv.cfg
day6/src/asyncio_dashboard.egg-info/: requires.txt
day6/src/configuration/: conf.py
day6/src/utils/: clock.py  main.py
