[project]

name = "asyncio-dashboard"

version = "1.0.0"

description = "A dashboard for monitoring applications."

authors = [

    { name = "saravanan", email = "saravanan@email.com" }

] 

readme = "README.md" 

requires-python = ">=3.10"

# production dependencies

dependencies = [

    "faker>=18.0.0",

    "pandas>=2.0.0",

    "pydantic[email]>=2.0.0",

    "python-dotenv>=0.19.0",

    "pydantic>=2.0.0",

    "aiohttp>=3.8.0",

    "asyncio>=3.4.0",

    "psutil>=5.9.0",
    
    "websockets>=10.0.0"


]
 
#development dependencies

[project.optional-dependencies]

dev = [

    "pytest>=7.2.0",

    "pytest-html>=4.2.0",

    "pytest-cov>=3.0.0",

    "black>=23.3.0",

    "isort>=5.10.1",

    "sphinx>=5.0.0"

]
 
[tool.black]

line-length = 88

target-version = ['py313']

 
